	- All '/ta' commands are now accessable ingame and at the console, excluding '/ta town/nation name add' for console.
	- Fixed an error with the new bukkit config failing to set a value (debug/devmode etc)
	- Temporary fix for prefixes not being updated in Towny when a player changes permissions groups etc.
v0.76.3.5:
	- Revert the PEX change as they reverted their change of .has() for release.
v0.76.3.6:
	- Added Embassy plots. These may be leased by anyone, so long as they belong to a town (they don't have to be a member of the plot owning town).
	- New commands:-
	  '/plot set embassy'
	  '/town set embassyprice $' - Sets the default price for Embassy plots (can be overridden by '/plot fs $')
	  '/town set embassytax $'   - This is charged on top of the towns normal plot tax.
	- Changed response when setting resident/plot/town perms to be more readable.
v0.76.3.7:
	- Fixed '/town claim' which I broke when fixing admin unclaim.
v0.76.3.8:
	- When claiming/unclaiming groups of TownBlocks the message will no longer spam up your screen with the plot list.
	- Embassy plots now show up on the map as 'E'.
	- Threaded plot claim/unclaim to eliminate lag on LARGE claims.
	- plot claiming now supports the all suffix (/plot unclaim all).'
	- Capped claiming by radius to 1000 TownBlocks.
v0.76.3.9:
	- Reduced default plots per resident to 8, instead of 16 (town_block_ratio).
	- Added settings for Questioner accept/deny so server admins can change the default commands to accept or deny invites.
	- Added Arena plots. These plots default to PVP enabled, and can not have PVP disabled.
	- Added plot toggle commands...
	  '/plot toggle pvp'
	  '/plot toggle fire'
	  '/plot toggle explosion'
	  '/plot toggle mobs'
v0.76.3.10:
	- Arena plots now ignore Friendly fire settings.
	- Town Health Regen is now disabled in Arean plots.
v0.76.3.11:
	- Added protection from Enderman griefing (if town mobs are off).